--- a/src/scss/app/modules/_global.scss
+++ b/src/scss/app/modules/_global.scss
@@ -5,7 +5,7 @@ body {
 	background-color: $body-bg;
 	// overflow-x: hidden;
 	&::-webkit-scrollbar { 
-    display: none; 
+    display: none;     
 	}
 }
 
@@ -66,10 +66,6 @@ html, body, .site-wrapper {
 	height: 100%;
 }
 
-p, body, .container{
-	margin: 0px;
-	padding: 0px;
-}
 
 .container{
 	min-height: 100%;
@@ -125,7 +121,6 @@ nav{
 .container{
 	position: relative;
 	font-family: "raleway";
-	margin: 0 auto;
 	text-align: center;
 	color: white;
 
